# server/internal/api/router.go
@@ -3,6 +3,7 @@ package api
 import (
 	"do-your-dailies/server/internal/apidocs"
 	"do-your-dailies/server/internal/domain/chorecompletions"
+	"do-your-dailies/server/internal/domain/chorequeue"
 	"do-your-dailies/server/internal/domain/chores"
 	"do-your-dailies/server/internal/logging"
 	"do-your-dailies/server/internal/swagger"
@@ -22,10 +23,12 @@ func (app *Application) setupRoutes() *chi.Mux {
 
 	choreHandler := chores.NewHandler(app.ChoreStore)
 	choreCompletionHandler := chorecompletions.NewHandler(app.ChoreStore, app.ChoreCompletionStore)
+	choreQueueHandler := chorequeue.NewHandler(app.ChoreQueueStore)
 
 	router.Route("/api", func(router chi.Router) {
 		router.Route("/chores", choreHandler.RegisterRoutes)
 		router.Route("/chore-completions", choreCompletionHandler.RegisterRoutes)
+		router.Route("/chore-queue", choreQueueHandler.RegisterRoutes)
 	})
 
 	return router
